objects/GEMS_Account_Submission_required_doc__mdt.object
<CustomObject>
    <description>This Metadata describes required documents list from new custom meta data based on the account submission case data.</description>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <label>Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Documents__c</fullName>
        <label>Required Documents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Sub_type__c</fullName>
        <label>Submission Sub-type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Type__c</fullName>
        <label>Submission Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GEMS Account Submission required doc</label>
    <listViews>
        <fullName>Active_Records</fullName>
        <columns>MasterLabel</columns>
        <columns>Is_Active__c</columns>
        <columns>Division__c</columns>
        <columns>Document_Type__c</columns>
        <columns>Fields__c</columns>
        <columns>Funding_Type__c</columns>
        <columns>Products__c</columns>
        <columns>Required_Documents__c</columns>
        <columns>Submission_Sub_type__c</columns>
        <columns>Submission_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Records</label>
    </listViews>
    <pluralLabel>GEMS Account Submission required docs</pluralLabel>
</CustomObject>